# AShareAgent

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  skills.md
configs/: strategy_evaluation.yml  strategy_params.yml  universe.yml
docs/: architecture.md  data-contracts.md  research-log.md  safety.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  format.ts  styles.css  types.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_data_quality_reports.py  0003_data_reliability.py
scripts/: daily_run.sh  install_launchd_schedules.sh  scheduled_run.sh  uninstall_launchd_schedules.sh
src/ashare_agent/: __init__.py  api.py  cli.py  (+12 more)
tests/: test_akshare_external.py  test_akshare_provider_contract.py  test_announcement_analyzer.py  test_backtest_runner.py  test_cli.py  test_dashboard_api.py  test_dashboard_query.py  test_dashboard_query_agent.py  test_data_collector.py  test_data_quality_agent.py  test_data_reliability_agent.py  test_intraday_price_estimator.py  test_launchd_installer.py  test_llm_clients.py  test_market_regime_analyzer.py  test_migration_contract.py  test_mock_provider_contract.py  test_openai_llm_config.py  test_paper_trader.py  test_pipeline_mock.py  test_reports.py  test_repository_paper_state.py  test_review_metrics_agent.py  test_risk_manager.py  test_safety_boundaries.py  test_scheduled_run.py  test_signal_engine.py  test_strategy_evaluation.py  test_strategy_insights.py  test_strategy_params_agent.py  test_universe_config.py
(+22 files in other folders)
