[project]
name = "ashare-agent"
version = "0.1.0"
description = "A-share research assistant and paper trading agent."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "akshare>=1.16.0",
  "alembic>=1.13.2",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.32",
  "typer>=0.12.3",
]

[project.scripts]
ashare = "ashare_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare_agent"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "ruff>=0.5.7",
  "pyright>=1.1.376",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not external"]
markers = [
  "external: tests that require network or live third-party services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
